--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,17 +1,8 @@
 <div class="row">
   <div class="col-md-5">
-    <app-recipe-list
-      (wasRecipeSelected)="recipeSelected = $event"
-    ></app-recipe-list>
+    <app-recipe-list></app-recipe-list>
   </div>
   <div class="col-md-7">
-    <app-recipe-detail
-      *ngIf="recipeSelected; else infoText"
-      [recipe]="recipeSelected"
-    ></app-recipe-detail>
-
-    <ng-template #infoText>
-      <h1>Please select a Recipe!</h1>
-    </ng-template>
+    <router-outlet></router-outlet>
   </div>
 </div>
