end of section 16 229

--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -5,8 +5,8 @@
     <ul class="list-group">
       <a
         class="list-group-item"
-        
-        *ngFor="let ingredient of ingredients"
+        (click)="onEditItem(i)"
+        *ngFor="let ingredient of ingredients; let i = index"
       >
         {{ ingredient.name }} ({{ ingredient.amount }})
       </a>
