--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -10,6 +10,7 @@
             name="name"
             ngModel
             class="form-control"
+            required
           />
         </div>
         <div class="col-sm-2 form-group">
@@ -20,17 +21,32 @@
             name="amount"
             ngModel
             class="form-control"
+            required
+            pattern="^[1-9]+[0-9]*$"
           />
         </div>
       </div>
 
       <div class="row">
         <div class="col-xs-12">
-          <button class="btn btn-success" type="submit">
-            Add
+          <button
+            class="btn btn-success"
+            type="submit"
+            [disabled]="!ngForm.valid"
+          >
+            {{ editMode ? "Update" : "Add" }}
           </button>
-          <button class="btn btn-danger" type="button">Delete</button>
-          <button class="btn btn-primary" type="button">Clear</button>
+          <button
+            class="btn btn-danger"
+            type="button"
+            (click)="onDelete()"
+            *ngIf="editMode"
+          >
+            Delete
+          </button>
+          <button class="btn btn-primary" type="button" (click)="onClear()">
+            Clear
+          </button>
         </div>
       </div>
     </form>
